# sdcc

./: .gitignore  README.md  pyproject.toml
sdcc/maps/: __init__.py  compilation.py  general.py  runtime.py
sdcc/maps/compilation_maps/: double_int_literal_conversion.py  indexing_one_too_far.py  missing_semicolon_line_before_assert.py
sdcc/probing_tests/: conftest.py  const.py  test_compile.py  test_it.py  test_runtime.py
sdcc/probing_tests/compilation/: __init__.py  diagnoser.py  executor.py  test_extract_context.py
sdcc/probing_tests/dcc_runtime/: dcc_main.c  student.c
sdcc/stu/: student.c
tests/: conftest.py  test_auto.py
tests/data/recorded_feedback/: double_int_literal_conversion.c.md  indexing_one_too_far.c.md  missing_semicolon_line_before_assert.c.md
tests/data/representative_answers/: double_int_literal_conversion.c  indexing_one_too_far.c  missing_semicolon_line_before_assert.c
